postreview changes fixed bug in IN/ALL/ANY subqeries with HAVING clause (BUG#9350)

mysql-test/r/subselect.result:
  added new subquery tests to make code covarage better
mysql-test/t/subselect.test:
  added new subquery tests to make code covarage better
sql/item_subselect.cc:
  fixed typo in comment
  removed unused code
  fixed bug with HAVING clause detectiuon (BUG#9350)
  postreview changes